# ZM2_Mereni

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  deploy.sh  get_requirements.py  main.py  main_grafy.py  main_statistika.py  pyproject.toml  release.yml  requirements.txt  utils.py  validate_inputs.py  version.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  release.yml
1. měření/: legraf.py
1. měření/data/: Modrá Dioda  Modrá LED Dioda  Oranžová Dioda  uloha_1  Červená LED Dioda  Žlutá LED Dioda
10. měření/: grafika.py
10. měření/input/: měření_E_1.txt  měření_E_2.txt  měření_E_3.txt  měření_T_1.txt  měření_T_2.txt  měření_T_3.txt  měření_U_1.txt  měření_U_2.txt  měření_U_3.txt
10. měření/parsedData/: měření_E_1.txt  měření_E_2.txt  měření_E_3.txt  měření_T_1.txt  měření_T_2.txt  měření_T_3.txt  měření_U_1.txt  měření_U_2.txt  měření_U_3.txt
3. měření/inputfiles/: hmotnosti_kouly.toml  koule_hustota.txt  pyknometr_neprima_chyba.toml  pyknometricka_uloha.txt  rozmery_kouli.txt  rozmery_neprime_chyby.txt  vztlak_pyknometr.toml
5. měření/: uloha_1.toml  uloha_2.toml  uloha_5.toml  uloha_6.toml  uloha_7.toml
7. měření/Porovnávací metoda/: odpory_porovnani_1.tgn  odpory_porovnani_2.tgn
7. měření/Přímé měření/: prime_mereni_1.tgn  (+1 more)
8. měření/: graf_bez_rx.py  input  input.txt
9. měření/: graf.py  graf_vypocty.py  input_data
builder/: build.sh  build_appimage_linux.sh  build_grafy_linux.sh  build_grafy_windows.ps1  build_statistika_linux.sh  build_statistika_windows.ps1  simulate_release.sh
docs/: Makefile  conf.py  index.rst  input_formats.md  shell_completion.md
examples/: README.md
objects/: __init__.py  config.py  input_parser.py  logger.py  measurement.py  measurement_set.py  units.py
security/: matyas095Gameing_public.crt
statisticke_vypracovani/: base.py
tests/: aritmeticky_prumer.py  test_aritmeticky_prumer.py  test_cassy_data.txt  test_derivace.py  test_format_table.py  test_graf.py  test_input_parser.py  test_join_tables.py  test_measurement.py  test_neprima_chyba.py  test_outliers.py  test_regrese.py  test_units.py  test_utils.py  test_vazeny_prumer.py
zm2/: __init__.py
(+69 files in other folders)
